--- a/ChangeLog.txt
+++ b/ChangeLog.txt
@@ -1,3 +1,16 @@
+2010-01-06 McCabe Maxsted  <hakushakukun@gmail.com>
+
+	* Applied VWR-4232: some particles do not disappear when UI is hidden, from snowglobe.
+	
+	  modified:   linden/indra/newview/llhudeffectbeam.cpp
+	  modified:   linden/indra/newview/llhudeffectbeam.h
+	  modified:   linden/indra/newview/llhudeffecttrail.cpp
+	  modified:   linden/indra/newview/llhudeffecttrail.h
+	  modified:   linden/indra/newview/llhudobject.cpp
+	  modified:   linden/indra/newview/llhudobject.h
+	  modified:   linden/indra/newview/pipeline.cpp
+
+
 2010-01-03  Armin Weatherwax  <Armin.Weatherwax@gmail.com>
 
 	* Several changes to work better on 64bit Linux.
